# AI-Life-Assistant-Guide

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMMANDS.md  COMPLETE_ANALYSIS.md  ISSUES.md  Makefile  README.md
.github/workflows/: release-desktop.yml
backend/: .env.example  jarvis-backend.spec  requirements.txt  reset_password.py  run_packaged_backend.py  run_tests.py  test_login.py  test_router_email.py  verify_login.py
backend/app/: main.py
backend/app/agents/: browser_agent.py  calendar_agent.py  chart_agent.py  chrome_agent.py  exporter.py  file_agent.py  gmail_agent.py  image_agent.py  report_ai.py  voice_reader.py
backend/app/ai/: base_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
backend/app/api/: routes_ai.py  routes_auth.py  routes_gsuite.py  routes_rag.py  routes_settings.py  routes_setup.py  routes_tasks.py  routes_user.py  voice.py
backend/app/automation/: system_agent.py  task_agent.py
backend/app/config/: paths.py  settings.py
backend/app/core/: auth.py
backend/app/data/: contact_manager.py  contacts.json
backend/app/database/: base.py  db.py  init_db.py  models.py
backend/app/models/: contact.py  (+3 more)
backend/tests/: test_command_schema.py  test_configuration.py  test_memory_service.py  test_multi_user_isolation.py
build-vs/: CMakeCache.txt
cmake/: Install.cmake  LoadProjectConfig.cmake  ProjectConfig.cmake.in  Run.cmake  RunBackend.cmake  RunFrontend.cmake
docs/: model-consolidation-plan.md
frontend/: electron.js  index.html  package-lock.json  package.json  preload.js
frontend/src/: App.jsx  index.css  index.html
scripts/: build-backend-exe.ps1  build-win-standalone.ps1  dev_start.ps1
(+42 files in other folders)
